syntax = "proto3";
package telemetry;

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

// option go_package = "github.com/nmercer/yoshi2/services/server";

message Location {
  string name = 1;
  int32 id = 2;
}

message GetLocationsResponse {
  repeated Location locations = 1;
}

service Locations {
  rpc GetLocations(google.protobuf.Empty) returns (GetLocationsResponse) {
    option (google.api.http) = {
      get: "/locations"
    };
  }

  rpc CreateLocation(Location) returns (Location) {
    option (google.api.http) = {
      post: "/locations/{name}"
      body: "*"
    };
  }
}
