syntax = "proto3";
package telemetry;

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

message Temp {
  float temp = 1;
  int32 location_id = 2;
}

message GetTempsRequest {
  int32 location_id = 1;
}

message GetTempsResponse {
  repeated float temps = 1;
}

service Temps {
  rpc GetTemps(GetTempsRequest) returns (GetTempsResponse) {
    option (google.api.http) = {
      get: "/locations/{location_id}/temps"
    };
  }

  rpc CreateTemp(Temp) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/locations/{location_id}/temps/{temp}"
      body: "*"
    };
  }
}
